@@ -64,7 +64,7 @@
          "web" : "https://github.com/nichtich/Pandoc-Elements"
       }
    },
-   "version" : "0.12",
+   "version" : "0.13",
    "x_contributors" : [
       "Jakob Voß <jakob.voss@gbv.de>"
    ]
