@@ -42,7 +42,7 @@ LaTeX, ODT, and ePUB.
 Please make sure to use at least Pandoc 1.12 when processing documents
 
 See module [Pandoc::Filter](https://metacpan.org/pod/Pandoc::Filter) and [Pandoc::Walker](https://metacpan.org/pod/Pandoc::Walker) for processing the AST
-of pandoc documents in Perl. And [pandoc-walk](https://metacpan.org/pod/pandoc-walk) for traversing documents
+of pandoc documents in Perl. And [pandocwalk](https://metacpan.org/pod/pandocwalk) for traversing documents
 via command line (requires Pandoc >= 1.12).
 
 ## EXPORTED FUNCTIONS
