@@ -1,12 +1,12 @@
 #!/usr/bin/env perl
-require 5.010;
 use strict;
+require 5.010;
+
+my $VERSION = '0.13';
 
 use Getopt::Long;
 use Pod::Usage;
 use Pod::Simple::Pandoc;
-
-my $VERSION = '0.12';
 
 my %opt;
 GetOptions( \%opt, 'help|h|?', 'man' ) or exit 1;
